#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-09-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999926 released.

        * Work on Scheduled Jobs continues.

        * New version of Term::Menus paired with this release.


2013-09-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999925 released.

        * Resumed work on Scheduled Jobs.

        * New version of Term::Menus paired with this release.


2013-08-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999924 released.

        * More work on Plans - nearly complete.

        * New version of Term::Menus paired with this release.


2013-08-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999923 released.

        * More work on Plans.

        * New version of Term::Menus paired with this release.


2013-08-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999922 released.

        * Plan Expiration is complete.


2013-08-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999921 released.

        * Nearly Complete with Plan Expiration logic.


2013-08-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999920 released.

        * More improvements to the Plan Menu facility.

        * New version of Term::Menus paired with this release.


2013-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999919 released.

        * More improvements to the Plan Menu facility.


2013-08-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999918 released.
