@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 52a69edbe9bc089930d721e3653534f780362708 ChangeLog
+SHA1 dd055b5ad7fe3e2a4920b2e0c7e11d71f84939f0 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 768d4aefb69f5487e0354fef33886cf9330e5d9b META.yml
-SHA1 1767c92ea3365dd71d73f18b57d49355ffe58a35 MYMETA.json
-SHA1 fc9276100683f2bca9cd9ef3d6044c54800bdc3f MYMETA.yml
-SHA1 f73fbd03cf0bdf111393b14c9403d9783d08c2ad Makefile.PL
+SHA1 99e4ac7bede833bf2ed08d927a2e03e436cd6e04 META.yml
+SHA1 3c71e9fbfbe1e053ad81b7ed62c2a25926eee44a MYMETA.json
+SHA1 4fd0bb1578dffce6b0c800ff42020123cca2920a MYMETA.yml
+SHA1 7ad1404cde55d2471b7a64891886adcd8e05f3ba Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 26ab05febbdab79359953d086b447397c1719b5c bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 3df12be701efa2432e392a16a282485919220b70 lib/Net/FullAuto.pm
+SHA1 cf22f6e6b231320d74d32c0ffa11d20821b392dd lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,17 +50,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 7dace835da1bc71cd8136de571c85e8d4803bb3d lib/Net/FullAuto/FA_Core.pm
+SHA1 ff26c26b9631d5854c2acd3551caf995b1f1ce12 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSQKrUAAoJEBa/9Pad787EGbAIAMCq26YxQf08GdNMlufSi27u
-VuBtQrLW4loFxr9+Lkrls8QtOpkYmQmpEfOiUlAdrjSe7nHw7TWI5zV8oidJWBmY
-LJcwje8j+1iS3l6yTrdsrY/wSD9cSubIJRnEKWkNI3BSkK+s25PEL29orOubTrDC
-PPFM8NF/gLcQYZibki3kMBAdIefAf023aQUcTcE2p5gDLnXWpxfBzh3XbemKZsr5
-Jv18Jez9dkypeKVZNTePXM8gDkYuxqaua4pzowxmVlFQLqilZoX2sBKCziWJbARq
-HplLOVEVCEZoodPNi9DHyWIJtCAkfPkw1KzVasjJazo82e9nN5ApQ1ScDo3UBY8=
-=YWwO
+iQEcBAEBAgAGBQJSSdpzAAoJEBa/9Pad787EnAAIALUeJEALbhvEet6n+o5cxJi/
+t+gvwZu9Fby3RysHZqVwvdK1RKHnZJdq1Ege2ZaW+MeIlMaOwj6OTioUnjLdfa7p
+CTHbYJpS+rGELNUzeVpENsW/YgnDjB5HODUPHcz0Kzzns9Lw11oi/Q94fPxWL9Ll
+g/IDX1BHoKA4YAmNx3Ivf3PpOZDguXmwvV8ezq2yeH+r4cIKmxEbaQr8q78RfBVw
+ooTWX0AaZ/qsQ+bX9i9fQWYRevpnSOKpibc9GImOSEN0dSN8nx3kpSh9uAhEZLNI
+Qg5G9JOEDJ7W1naVbez9wVT64gVZh/vo09/7E3drp1CgdKbn/W+LEEeKzIsTBXk=
+=lcrp
 -----END PGP SIGNATURE-----
